# marker-pose-estimation

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md  docker-compose.yml  docker-compose.yml.build  mpe
include/mpe/pose_estimation/: marker_pose.h  pose_estimation.h
include/mpe/utils/: config_exception.h  draw_cube.h  marker_detector.h  path_loader.h
input/: config.yml
samples/: iPhone6s_plus_camera_calibration_photo_live_mode.xml
src/: CMakeLists.txt
src/marker_creation/: CMakeLists.txt  marker_creation.cc
src/pose_estimation/: CMakeLists.txt  pose_estimation.cc
src/utils/: CMakeLists.txt  draw_cube.cc  marker_detector.cc  path_loader.cc
